# artisan

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  config.yaml  llm_client.py  llm_prompt.py  pyproject.toml  react_agent.py  requirements.txt  secrets_manager.py
config/: .env.tools.example  config.yaml
src/react/: __init__.py  agent.py  baseline.py  client.py  secrets.py
src/react/tools/: base.py  builtin.py
tests/: test_agent_sandbox.py  test_client.py  test_package_init.py
tools/: __init__.py  base.py  builtin.py
