[project]
name = "react-agent"
version = "0.1.0"
description = "A ReAct agent with reflective tool management and use"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    "google-generativeai>=0.4.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
react = "react.agent:main"
baseline = "react.baseline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/react"]
